# lmc

./: Cargo.toml  build.sh  example_game  test_parity.py  test_parity.sh
buchi/: Cargo.toml
buchi/src/: error.rs  lib.rs  nba.rs
inputs/: 2philos.pnml  LTLFireability.xml  Until.xml  philoslides.pnml
inputs/philosophers/: Philosophers-1000.pnml  Philosophers-500.pnml
ltl/: Cargo.toml
ltl/src/: error.rs  formula.rs  lib.rs  transform.rs
ltl/src/formula/: xml.rs
parity/: Cargo.toml
parity/src/: fpi.rs  lib.rs  parse.rs  spm.rs  tangle.rs  zielonka.rs
petri/: Cargo.toml
petri/src/: error.rs  lib.rs
src/: error.rs  main.rs  transform.rs
src/petri/: mod.rs  parser.rs
