[package]
name = "lmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.0"
clap = { version = "3.1.17", features = ["derive"] }
serde = "1.0.137"
serde-xml-rs = "0.5.1"
serde_derive = "1.0.137"
thiserror = "1.0.31"
