[package]
name = "lmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petri = { path = "./petri" }
ltl = { path = "./ltl" }
buchi = { path = "./buchi" }

clap = { version = "3.1.17", features = ["derive"] }
anyhow = "1.0.57"
itertools = "0.10.3"